--- a/tint2/tint2-button.desktop
+++ b/tint2/tint2-button.desktop
@@ -1,4 +1,5 @@
-[Desktop Entry] Encoding=UTF-8
+[Desktop Entry] 
+Encoding=UTF-8
 Name=Tint2 Openbox Menu
 Comment=Tint2 Openbox Menu
 X-GNOME-FullName=Openbox Menu
